--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 }
 
 canvas{
+    margin-top: 50px;
     border: 5px solid white;
-    padding: 20px;
     box-shadow: 5px 5px 5px white;
 }
